--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,4 +31,9 @@
     <string name="signup_empty_mbti">MBTI는 한 글자 이상 입력해 주세요</string>
     <string name="signup_empty_id">아이디는 6 ~ 10자 사이로 입력해 주세요</string>
     <string name="signup_empty_pw">비밀번호는 8 ~ 12자 사이로 입력해 주세요</string>
+    <string name="bottom_nav_friends">친구</string>
+    <string name="bottom_nav_search">검색</string>
+    <string name="bottom_nav_mypage">마이페이지</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
