--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,7 +17,7 @@
     <string name="login_success_login">로그인 성공</string>
     <string name="signup_nickname">닉네임</string>
     <string name="signup_input_nickname">닉네임을 입력해주세요</string>
-    <string name="signup_mbti">MBTI</string>
+    <string name="signup_phone_number">Phone</string>
     <string name="login_signup_success">회원가입에 성공했습니다.</string>
     <string name="main_user_name">name</string>
     <string name="main_id">ID</string>
@@ -26,14 +26,16 @@
     <string name="main_user_pw">userpw</string>
     <string name="main_logout_btn">계정삭제</string>
     <string name="login_fail_login">잘못된 로그인 입니다</string>
-    <string name="signup_imput_mbti">MBTI를 입력해주세요</string>
+    <string name="signup_input_phone_number">전화번호를 입력해주세요</string>
     <string name="signup_empty_nickname">닉네임은 한 글자 이상 입력해 주세요</string>
-    <string name="signup_empty_mbti">MBTI는 한 글자 이상 입력해 주세요</string>
+    <string name="signup_empty_phone_number">전화번호는 한 글자 이상 입력해 주세요</string>
     <string name="signup_empty_id">아이디는 6 ~ 10자 사이로 입력해 주세요</string>
     <string name="signup_empty_pw">비밀번호는 8 ~ 12자 사이로 입력해 주세요</string>
     <string name="bottom_nav_friends">친구</string>
     <string name="bottom_nav_search">검색</string>
     <string name="bottom_nav_mypage">마이페이지</string>
+
+    <string name="signup_server_error">서버 에러</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
